# PhotogrammetryTasks2026

./: CMakeLists.txt  README.md
.github/: pull_request_template.md
.github/scripts/macos/: install_ceres_solver.sh  install_eigen3.sh
.github/scripts/windows/: install_eigen3.ps1
.github/workflows/: cmake.yml
results/herzjesu/: point_cloud_2_cameras.ply
results/saharov/: point_cloud_N_cameras.ply
src/phg/core/: calibration.cpp
src/phg/matching/: descriptor_matcher.cpp  descriptor_matcher.h  flann_matcher.cpp  flann_matcher.h
src/phg/mvs/depth_maps/: pm_depth_maps.cpp  pm_depth_maps.h  pm_fast_random.cpp  pm_fast_random.h  pm_geometry.cpp  pm_geometry.h
src/phg/sfm/: defines.h  ematrix.cpp  fmatrix.cpp  homography.cpp  homography.h  panorama_stitcher.cpp  panorama_stitcher.h  resection.cpp  sfm_utils.cpp  triangulation.cpp
src/phg/sift/: sift.cpp
tests/: test_ceres_solver.cpp  test_depth_maps_pm.cpp  test_matching.cpp  test_sfm_ba.cpp  test_sift.cpp
tests/utils/: test_utils.cpp  test_utils.h
